@@ -1,12 +1,7 @@
 #!/bin/bash
 
-tar zxvf server-jre-7u21-linux-x64.gz 
-ln -s jdk1.7.0_21 java
+cd /usr/local/src/
 
-cat > /srv/apache-tomcat/bin/setenv.sh <<EOF
-export JAVA_HOME=/srv/java
-export JAVA_OPTS="-server -Xms512m -Xmx8192m  -XX:PermSize=64M -XX:MaxPermSize=512m"
-export CATALINA_HOME=/srv/apache-tomcat
-export CLASSPATH=$JAVA_HOME/lib:$JAVA_HOME/jre/lib:$CATALINA_HOME/lib
-export PATH=$PATH:$JAVA_HOME/bin:$JAVA_HOME/jre/bin:$CATALINA_HOME/bin:
-EOF
+tar zxvf server-jre-7u21-linux-x64.gz 
+mv jdk1.7.0_21 /srv/
+ln -s /srv/jdk1.7.0_21 /srv/java
